--- a/wp-content/themes/vivarse/style.css
+++ b/wp-content/themes/vivarse/style.css
@@ -731,8 +731,7 @@ article {
 # Site width and general layout
 --------------------------------------------------------------*/
 html, body {
-  height: 100%;
-  overflow-x: hidden; }
+  height: 100%; }
 
 .site, .site-header, .site-content, .site-footer {
   clear: both;
@@ -749,9 +748,15 @@ html, body {
 /*--------------------------------------------------------------
 # Header and navigation stuff
 --------------------------------------------------------------*/
+.site-header {
+  position: fixed;
+  width: 100%;
+  top: 0; }
+
 .main-navigation {
-  padding: 0 20px;
-  height: 80px; }
+  height: 80px;
+  width: 100%;
+  padding: 0 35px; }
   .main-navigation ul {
     float: right; }
   .main-navigation a {
@@ -769,6 +774,9 @@ html, body {
     height: 80px;
     padding: 15px; }
 
+.site-content {
+  margin-top: 80px; }
+
 /* Hamburger menu */
 .menu-toggle {
   float: right; }
@@ -785,6 +793,19 @@ html, body {
   right: 0;
   left: 0;
   height: 200px; }
+
+/*--------------------------------------------------------------
+# Posts stuff
+--------------------------------------------------------------*/
+article {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto; }
 
 /*--------------------------------------------------------------
 # Git current branch popup
